# Tracker

./: .gitignore  package-lock.json  package.json  readme.md  setup.md  time_tracking_dashboard_outline.html
.github/: copilot-instructions.md
apps/browser-extension/: manifest.json  package.json
apps/browser-extension/src/: background.js  options.html  options.js  popup.html
apps/dashboard/: index.html  package.json  tsconfig.app.json  tsconfig.node.json
apps/dashboard/src/: App.tsx  index.css
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/src/: App.tsx  index.css  types.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src/components/: TimelineRowTrack.tsx
apps/mobile-android/: package.json  settings.gradle.kts
apps/mobile-android/app/: build.gradle.kts
apps/mobile-android/app/src/main/: AndroidManifest.xml
apps/mobile-android/app/src/main/java/com/focus/mobile/: FocusDatabase.kt  MainActivity.kt  MainViewModel.kt  Models.kt  SyncRepository.kt  UsageCollector.kt
apps/mobile-android/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
apps/mobile-android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
apps/mobile-ios/: package.json
apps/mobile-ios/FocusMobile/FocusMobile/: ActivityCollector.swift  ContentView.swift  FocusMobileApp.swift  FocusViewModel.swift  Models.swift  SQLiteStore.swift  SyncClient.swift
services/sync-server/: package.json
services/sync-server/src/: db.ts  index.ts  realtime.ts  schema.ts
