[package]
name = "focus-desktop"
version = "1.0.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
aes-gcm = "0.10.3"
base64 = "0.22.1"
chrono = { version = "0.4.39", features = ["serde"] }
device_query = "2.1.0"
rand = "0.8.5"
reqwest = { version = "0.12.12", features = ["json", "rustls-tls"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
sha2 = "0.10.8"
tauri = { version = "2.2.5", features = [] }
url = "2.5.4"
uuid = { version = "1.13.1", features = ["v4", "serde"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59.0", features = [
  "Win32_Foundation",
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_UI_WindowsAndMessaging"
] }
